bindings/flutter_tessera/android/src/main/cpp/include/tessera.h


typedef struct TesseraEngine TesseraEngine;
typedef uint32_t TesseraDefId;    
typedef uint64_t TesseraEntityId; 
typedef uint64_t TesseraTileId;   
typedef uint64_t TesseraDiceId;   
typedef uint64_t TesseraOpId;     
typedef void (*TesseraLogFn)(void* userdata, int level, const char* msg);
typedef struct {
    void*  native_window;       
    int    width, height;       
    float  pixel_density;       
    bool   engine_driven_loop;  
    bool   debug;               
    TesseraLogFn log;           
    void*  log_userdata;
} TesseraConfig;
TESSERA_API TesseraEngine* tessera_create(const TesseraConfig* cfg);
typedef struct {
    const void* data;       
    size_t      size;
    const char* path;       
    const char* debug_name; 
} TesseraBytes;
typedef struct { float u0, v0, u1, v1; } TesseraRect;
typedef struct {
    TesseraDefId atlas;          
    TesseraRect  top, side, bottom;
    float        tint[4];        
    float        thickness;      
} TesseraTileDef;
typedef struct {
    TesseraBytes gltf;           
    TesseraDefId atlas;          
    float        scale;          
    float        pivot[3];       
    int32_t      default_anim;
    int32_t      move_anim;
    int32_t      spawn_anim;
    int32_t      despawn_anim;
    TesseraDefId on_spawn_effect;
    TesseraDefId on_despawn_effect;
} TesseraEntityDef;
typedef struct {
    TesseraDefId     atlas;        
    TesseraRect      sprite;
    TesseraEmitMode  mode;
    uint32_t         count;        
    float            lifetime_s, lifetime_var;
    float            speed, speed_var;
    float            spread_deg;   
    float            gravity;      
    float            size_start, size_end;
    float            color_start[4], color_end[4];
    TesseraBlendMode blend;
    float            duration_s;   
} TesseraParticleSpec;
typedef struct {
    TesseraParticleSpec on_add;
    TesseraParticleSpec on_remove;
} TesseraEffectDef;
typedef struct { int32_t x, y; } TesseraCoord;
typedef struct {
    TesseraCoord  coord;
    TesseraDefId  tile_def;  
    uint32_t      variant;   
    TesseraTileId id;        
} TesseraTilePlacement;
typedef struct {
    TesseraEntityId id;      
    TesseraDefId    def;
    TesseraCoord    coord;
    uint16_t        facing;  
    uint32_t        anim;    
    const TesseraCoord* path;
    uint32_t            path_count;
} TesseraEntityPlacement;
typedef struct {
    TesseraEntityId id;
    TesseraDefId    def;
    TesseraCoord    coord;
    TesseraEntityId attach_entity_id; 
} TesseraEffectPlacement;
typedef struct {
    TesseraDiceId id;
    TesseraDefId  def;
    uint32_t      face;
    float         position[3];
    uint32_t      seed;
    float         throw_s;
} TesseraDicePlacement;
typedef struct {
    TesseraCardId id;
    TesseraDefId  def;
    float         position[3];
    float         orientation[4]; 
    bool          hidden;
    TesseraHandId hand;           
    uint32_t      hand_slot;
    TesseraCardDrawId source_draw;
    const float*  path;
    uint32_t      path_count;
} TesseraCardPlacement;
typedef struct {
    TesseraCardDrawId id;
    TesseraDefId      def;
    float             position[3];
    float             orientation[4]; 
    uint32_t          count;
    bool              top_hidden;
} TesseraCardDrawPlacement;
typedef struct {
    TesseraHandId id;
    float         position[3];
    float         orientation[4]; 
    float         spread_deg;
    float         radius;
    float         card_spacing;
} TesseraHandPlacement;
typedef struct {
    TesseraCoordF focus;        
    float distance, yaw, pitch; 
    float fov;                  
} TesseraCamera;
typedef struct {
    const TesseraTilePlacement*   tiles;    size_t tile_count;
    const TesseraEntityPlacement* entities; size_t entity_count;
    const TesseraEffectPlacement* effects;  size_t effect_count;
    TesseraCamera camera;
    uint64_t      epoch;        
    const TesseraCardPlacement*     cards;      size_t card_count;
    const TesseraCardDrawPlacement* card_draws; size_t card_draw_count;
    const TesseraHandPlacement*     hands;      size_t hand_count;
    const TesseraDicePlacement*     dice;       size_t dice_count;
} TesseraState;
TESSERA_API TesseraOpId tessera_set_state(TesseraEngine* e, const TesseraState* state);
TESSERA_API bool tessera_operation_completed(TesseraEngine* e, TesseraOpId op);
TESSERA_API TesseraOpId tessera_last_completed_operation(TesseraEngine* e);
typedef void (*TesseraOpCompletedFn)(TesseraOpId op, void* user);
TESSERA_API void tessera_set_operation_callback(TesseraEngine* e,
                                                TesseraOpCompletedFn fn, void* user);
typedef struct {
    bool            hit_tile;
    TesseraCoord    tile;            
    float           tile_distance;   
    bool            hit_entity;
    TesseraEntityId entity;          
    float           entity_distance; 
    float           ray_origin[3];   
    float           ray_dir[3];      
    float           point[3];        
} TesseraPick;
TESSERA_API bool tessera_pick(TesseraEngine* e, float screen_x, float screen_y, TesseraPick* out);
typedef struct {
    bool  onscreen;
    float x, y;        
    float depth;       
    float world[3];    
} TesseraScreenPos;
TESSERA_API bool tessera_world_to_screen(TesseraEngine* e, const float world[3],
                                         TesseraScreenPos* out);
TESSERA_API bool tessera_entity_screen_position(TesseraEngine* e, TesseraEntityId id,
                                                TesseraScreenPos* out);
TESSERA_API bool tessera_tile_screen_position(TesseraEngine* e, TesseraTileId id,
                                              TesseraScreenPos* out);
TESSERA_API bool tessera_camera_fit_distance(TesseraEngine* e,
                                             const TesseraTileId* tiles, size_t tile_count,
                                             const TesseraEntityId* entities, size_t entity_count,
                                             float padding, float* out_distance);
typedef struct {
    float move_s, add_s, remove_s, tile_s, reflow_s, camera_s;
    float speed_multiplier;   
} TesseraTiming;
TESSERA_API void tessera_set_timing(TesseraEngine* e, const TesseraTiming* t);
TESSERA_API bool tessera_is_idle(TesseraEngine* e);  
typedef enum {
    TESSERA_SHADOW_NONE = 0,
    TESSERA_SHADOW_BLOB = 1,
    TESSERA_SHADOW_MAP  = 2
} TesseraShadowMode;
typedef struct {
    TesseraShadowMode shadows;
    int   msaa;          
    float render_scale;  
} TesseraQuality;
typedef struct {
    float dir[3];        
    float color[3];
    float intensity;
    float ambient[3];
} TesseraLight;
TESSERA_API void tessera_set_quality(TesseraEngine* e, const TesseraQuality* q);
TESSERA_API void tessera_set_light(TesseraEngine* e, const TesseraLight* l);
typedef enum {
    TESSERA_PROJECTION_PERSPECTIVE = 0, 
    TESSERA_PROJECTION_ISOMETRIC   = 1  
} TesseraProjection;
TESSERA_API void tessera_set_projection(TesseraEngine* e, TesseraProjection mode);
typedef struct {
    bool  enabled;         
    float focus_distance;  
    float focus_range;     
    float blur_strength;   
} TesseraFocus;
TESSERA_API void tessera_set_focus(TesseraEngine* e, const TesseraFocus* focus);
typedef struct { TesseraBytes sprite; } TesseraDiceFace;
typedef struct {
    const TesseraDiceFace* faces;
    size_t                 face_count;
    float                  size;
    float                  tint[4];
} TesseraDiceDef;
TESSERA_API TesseraDefId tessera_register_dice_def(TesseraEngine* e, const TesseraDiceDef* def);
TESSERA_API uint32_t tessera_dice_def_face_count(TesseraEngine* e, TesseraDefId def);
TESSERA_API uint32_t tessera_dice_count(TesseraEngine* e);
TESSERA_API bool tessera_dice_face(TesseraEngine* e, TesseraDiceId id, uint32_t* out_face);
TESSERA_API bool tessera_dice_all_idle(TesseraEngine* e);
typedef struct {
    TesseraDefId visible_atlas;  TesseraRect visible_uv;  
    TesseraDefId hidden_atlas;   TesseraRect hidden_uv;   
    TesseraDefId back_atlas;     TesseraRect back_uv;     
    float width;         
    float height;        
    float thickness;     
    float corner_radius; 
    float tint[4];
} TesseraCardDef;
TESSERA_API TesseraDefId tessera_register_card_def(TesseraEngine* e, const TesseraCardDef* def);
TESSERA_API void tessera__debug_orbit(TesseraEngine* e, float dyaw, float dpitch, float dzoom);
TESSERA_API bool tessera_capture_png(TesseraEngine* e, int w, int h, const char* png_path);
TESSERA_API bool tessera_render_rgba(TesseraEngine* e, double dt_seconds,
                                     int w, int h, void* out_rgba, size_t out_size);