bindings/dart/lib/src/ffi.dart


  late final _RegCardD _registerCardDef =
      _lib.lookupFunction<_RegCardC, _RegCardD>('tessera_register_card_def');
  late final _RegDiceD _registerDiceDef =
      _lib.lookupFunction<_RegDiceC, _RegDiceD>('tessera_register_dice_def');
  late final _DiceFaceCountD _diceDefFaceCount = _lib
      .lookupFunction<_DiceFaceCountC, _DiceFaceCountD>('tessera_dice_def_face_count');
  late final _DiceCountD _diceCount =
      _lib.lookupFunction<_DiceCountC, _DiceCountD>('tessera_dice_count');
  late final _DiceFaceD _diceFace =
      _lib.lookupFunction<_DiceFaceC, _DiceFaceD>('tessera_dice_face');
  late final _DiceAllIdleD _diceAllIdle =
      _lib.lookupFunction<_DiceAllIdleC, _DiceAllIdleD>('tessera_dice_all_idle');

  late final _SetStateD _setState =
      _lib.lookupFunction<_SetStateC, _SetStateD>('tessera_set_state');
  late final _OpCompletedD _operationCompleted = _lib
      .lookupFunction<_OpCompletedC, _OpCompletedD>('tessera_operation_completed');
  late final _LastOpD _lastCompletedOperation = _lib
      .lookupFunction<_LastOpC, _LastOpD>('tessera_last_completed_operation');
  late final _SetOpCallbackD _setOperationCallback = _lib
      .lookupFunction<_SetOpCallbackC, _SetOpCallbackD>('tessera_set_operation_callback');
  late final _PickD _pick = _lib.lookupFunction<_PickC, _PickD>('tessera_pick');
  late final _WorldToScreenD _worldToScreen =
      _lib.lookupFunction<_WorldToScreenC, _WorldToScreenD>('tessera_world_to_screen');
  late final _EntityScreenD _entityScreenPosition = _lib
      .lookupFunction<_EntityScreenC, _EntityScreenD>('tessera_entity_screen_position');
  late final _TileScreenD _tileScreenPosition =
      _lib.lookupFunction<_TileScreenC, _TileScreenD>('tessera_tile_screen_position');
  late final _FitDistanceD _cameraFitDistance =
      _lib.lookupFunction<_FitDistanceC, _FitDistanceD>('tessera_camera_fit_distance');
  late final _SetTimingD _setTiming =
      _lib.lookupFunction<_SetTimingC, _SetTimingD>('tessera_set_timing');
  late final _IsIdleD _isIdle = _lib.lookupFunction<_IsIdleC, _IsIdleD>('tessera_is_idle');
  late final _SetQualityD _setQuality =
      _lib.lookupFunction<_SetQualityC, _SetQualityD>('tessera_set_quality');
  late final _SetLightD _setLight =
      _lib.lookupFunction<_SetLightC, _SetLightD>('tessera_set_light');
  late final _SetProjectionD _setProjection =
      _lib.lookupFunction<_SetProjectionC, _SetProjectionD>('tessera_set_projection');
  late final _SetFocusD _setFocus =
      _lib.lookupFunction<_SetFocusC, _SetFocusD>('tessera_set_focus');

  late final _OrbitD _debugOrbit =
      _lib.lookupFunction<_OrbitC, _OrbitD>('tessera__debug_orbit');
  late final _CaptureD _capturePng =
      _lib.lookupFunction<_CaptureC, _CaptureD>('tessera_capture_png');
  late final _RenderRgbaD _renderRgba =
      _lib.lookupFunction<_RenderRgbaC, _RenderRgbaD>('tessera_render_rgba');

  /// Create an engine and (when [nativeWindow] is null) its own window.
  ///
  /// [library] / [libraryPath] override native-library discovery. Throws
  /// [StateError] if `tessera_create` returns null.
  Tessera({
    int width = 1280,
    int height = 720,
    bool debug = false,
    double pixelDensity = 1.0,
    bool engineDrivenLoop = false,
    Pointer<Void>? nativeWindow,
    DynamicLibrary? library,
    String? libraryPath,
  })  : _lib = library ?? openTesseraLibrary(path: libraryPath),
        _ownsEngine = true {
    final cfg = calloc<TesseraConfig>();
    cfg.ref
      ..nativeWindow = nativeWindow ?? nullptr
      ..width = width
      ..height = height
      ..pixelDensity = pixelDensity
      ..engineDrivenLoop = engineDrivenLoop
      ..debug = debug;
    _engine = _create(cfg);
    calloc.free(cfg);
    if (_engine == nullptr) throw StateError('tessera_create failed');
  }

  /// Attach to an engine created and owned elsewhere in the same process — e.g.
  /// a native platform-view plugin that owns the GPU/render thread and hands the
  /// handle to Dart. This wrapper will NOT destroy the engine on [dispose].
  ///
  /// Only the any-thread calls (`setState`, `operationCompleted`,
  /// `lastCompletedOperation`, `isIdle`, `lastError`) are safe to use from
  /// Dart's UI isolate while the host ticks; GPU/render-thread calls
  /// (tick, resize, register*, pick, set light/quality/timing, capture, render)
  /// must be routed to the host's render thread — see docs/platforms.md.
  ///
  /// [handle] is the engine pointer as an integer address (as passed over a
  /// method channel from native, e.g. `reinterpret_cast<intptr_t>`).
  Tessera.fromHandle(
    int handle, {
    DynamicLibrary? library,
    String? libraryPath,
  })  : _lib = library ?? openTesseraLibrary(path: libraryPath),
        _ownsEngine = false {
    _engine = Pointer<TesseraEngine>.fromAddress(handle);
    if (_engine == nullptr) throw ArgumentError('null engine handle');
  }

  /// The raw engine handle, for calling any C entry point not wrapped here.
  Pointer<TesseraEngine> get handle => _engine;

  /// The underlying loaded native library.
  DynamicLibrary get library => _lib;

  // ---- lifecycle ----
  void resize(int w, int h, double density) => _resize(_engine, w, h, density);

  /// Advance animation + render one frame (host-driven mode). [dt] is seconds.
  void tick(double dt) => _tick(_engine, dt);
  String get lastError => _lastError(_engine).toDartString();
  String get backendName => _backendName(_engine).toDartString();
  int get version => _version();
  String get versionString => _versionString().toDartString();

  // ---- definitions (return a TesseraDefId; 0 = failure) ----
  int registerAtlas(Pointer<TesseraBytes> image) => _registerAtlas(_engine, image);
  int registerTileDef(Pointer<TesseraTileDef> def) => _registerTileDef(_engine, def);
  int registerEntityDef(Pointer<TesseraEntityDef> def) => _registerEntityDef(_engine, def);
  int registerEffectDef(Pointer<TesseraEffectDef> def) => _registerEffectDef(_engine, def);
  int entityDefAnimCount(int def) => _animCount(_engine, def);
  String entityDefAnimName(int def, int index) =>
      _animName(_engine, def, index).toDartString();

  // ---- cards ----
  /// Register a card def (visible/hidden/back atlas refs); returns a
  /// TesseraDefId (0 = fail). Place cards/piles/hands via [setState].
  int registerCardDef(Pointer<TesseraCardDef> def) => _registerCardDef(_engine, def);

  // ---- dice (state-driven: place dice via setState / TesseraDicePlacement) ----
  /// Register a dice def (per-face sprites); returns a TesseraDefId (0 = fail).
  int registerDiceDef(Pointer<TesseraDiceDef> def) => _registerDiceDef(_engine, def);

  /// Number of faces of a registered dice def (0 if not a dice def).
  int diceDefFaceCount(int def) => _diceDefFaceCount(_engine, def);

  /// Number of live dice (including those fading in/out).
  int get diceCount => _diceCount(_engine);

  /// The face targeted by a live die, or null if the id isn't present.
  int? diceFace(int id) {
    final out = calloc<Uint32>();
    try {
      return _diceFace(_engine, id, out) ? out.value : null;
    } finally {
      calloc.free(out);
    }
  }

  /// True when every live die has settled (no tumble or fade in progress).
  bool get diceAllIdle => _diceAllIdle(_engine);

  // ---- state / timing / quality / light ----
  /// Push a scene snapshot and return its *operation id* (monotonic, nonzero).
  /// The transition it triggers is complete once [operationCompleted] is true /
  /// [lastCompletedOperation] reaches it / the operation callback fires with it.
  int setState(Pointer<TesseraState> s) => _setState(_engine, s);

  /// True once operation [op] has fully animated. `op == 0` is always true.
  bool operationCompleted(int op) => _operationCompleted(_engine, op);

  /// Highest operation id whose transition has settled (0 if none yet).
  int get lastCompletedOperation => _lastCompletedOperation(_engine);

  /// Register a native callback fired once per operation as it completes (with
  /// the completed id). Fires on the engine tick thread; wrap it with a
  /// `NativeCallable.listener` when the listener lives on another isolate/thread.
  /// Pass nullptr to clear.
  void setOperationCallback(
    Pointer<NativeFunction<TesseraOpCompletedNative>> fn,
    Pointer<Void> user,
  ) =>
      _setOperationCallback(_engine, fn, user);

  /// Ray-pick the tile/entity under a logical window pixel (SDL input space).
  bool pick(double screenX, double screenY, Pointer<TesseraPick> out) =>
      _pick(_engine, screenX, screenY, out);

  /// Inverse of [pick]: project a world point (float[3]) to a logical window
  /// pixel. Returns false only on an invalid engine/viewport.
  bool worldToScreen(Pointer<Float> world, Pointer<TesseraScreenPos> out) =>
      _worldToScreen(_engine, world, out);

  /// Screen position of a live entity by its stable id. False if not present.
  bool entityScreenPosition(int id, Pointer<TesseraScreenPos> out) =>
      _entityScreenPosition(_engine, id, out);

  /// Screen position of a live tile by its instance id (0 = unqueryable).
  bool tileScreenPosition(int id, Pointer<TesseraScreenPos> out) =>
      _tileScreenPosition(_engine, id, out);

  /// Orbit distance (zoom) that keeps every listed tile/entity id on screen with
  /// a fractional [padding] margin. Pure query; feed the result into your
  /// camera's distance. Pass nullptr/0 for an unused id list.
  bool cameraFitDistance(Pointer<Uint64> tiles, int tileCount, Pointer<Uint64> entities,
          int entityCount, double padding, Pointer<Float> outDistance) =>
      _cameraFitDistance(_engine, tiles, tileCount, entities, entityCount, padding, outDistance);
  void setTiming(Pointer<TesseraTiming> t) => _setTiming(_engine, t);
  bool get isIdle => _isIdle(_engine);
  void setQuality(Pointer<TesseraQuality> q) => _setQuality(_engine, q);
  void setLight(Pointer<TesseraLight> l) => _setLight(_engine, l);

  /// Camera projection: TesseraProjection.perspective / .isometric.
  void setProjection(int mode) => _setProjection(_engine, mode);

  /// Depth-of-field; pass nullptr to disable.
  void setFocus(Pointer<TesseraFocus> focus) => _setFocus(_engine, focus);

  // ---- dev hooks ----
  void debugOrbit(double dyaw, double dpitch, double dzoom) =>
      _debugOrbit(_engine, dyaw, dpitch, dzoom);
  bool capturePng(int w, int h, String path) {
    final p = path.toNativeUtf8();
    final ok = _capturePng(_engine, w, h, p);
    calloc.free(p);
    return ok;
  }

  /// Advance animation by [dt] seconds and render one frame offscreen into
  /// [outRgba] (RGBA8, top-left origin, `w*h*4` bytes; [outSize] must be at
  /// least that). For embedders that present the frame themselves. Render-thread
  /// only. Returns false on failure.
  bool renderRgba(double dt, int w, int h, Pointer<Void> outRgba, int outSize) =>
      _renderRgba(_engine, dt, w, h, outRgba, outSize);

  /// Destroy the engine and release its window/GPU resources (owning wrappers
  /// only). A no-op for [Tessera.fromHandle], whose host owns the lifecycle.
  void dispose() {
    if (_ownsEngine) _destroy(_engine);
  }
}
